--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SESSION_KEY=qweasdzxc
-DATABASE_USERNAME=root
-DATABASE_PASSWORD=1234
-DATABASE_NAME=test30
+DATABASE_USERNAME=cm
+DATABASE_PASSWORD=5948
+DATABASE_NAME=test0
 DATABASE_HOST=127.0.0.1
 ACCESS_TOKEN_KEY=myaccessToken
